Name: TBC
Version: 0.0.1
Cabal-version: >= 1.2
Build-type: Simple
Copyright: Peter Gammie, Mark Wotton
Maintainer: peteg42@gmail.com
Author: Peter Gammie, Mark Wotton
Homepage: FIXME
License: BSD3
License-file: LICENSE
Synopsis: Testing By Convention
Description:

 TBC is a harness for running tests, relying on other libraries such
 as HUnit and QuickCheck to do the actual testing. If the tests follow
 conventions, TBC lets you skip a lot of boilerplate.

Extra-Source-Files: README

Library
  Build-depends: base, directory, filepath
  Extensions:
  Ghc-options: -Wall
  Exposed-Modules: Test.TBC
  Other-modules:
    Test.TBC.FoldDir
    Test.TBC.TestSuite
    Test.TBC.Drivers.GHCi
