Name: TBC
Version: 0.0.1
Cabal-version: >= 1.2
Build-type: Simple
Copyright: Peter Gammie, Mark Wotton
Maintainer: peteg42@gmail.com
Author: Peter Gammie, Mark Wotton
License: BSD3
License-file: LICENSE
Synopsis: Testing By Convention
Description:

 TBC is a harness for running tests, relying on other libraries such
 as QuickCheck to do the actual testing. If the tests follow
 conventions, TBC lets you skip a lot of boilerplate.

Extra-Source-Files: README

source-repository head
  type:     git
  location: git://github.com/peteg/TBC.git

Library
  Build-depends: base, Cabal, directory, filepath, process
  Extensions:
  Ghc-options: -Wall
  Exposed-Modules: Test.TBC
  Other-modules:
    Test.TBC.Convention
    Test.TBC.Drivers
    Test.TBC.TestSuite

Executable tbc
  Build-depends: base, Cabal, directory, filepath, process
  Extensions:
  Ghc-options: -Wall
  main-is: Test/Main.hs
